testコードの警告削除